deploy/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gucat-web-service-nginx
  namespace: gucat
spec:
  type: ClusterIP
  selector:
    app: gucat-web-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
